--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
         <footer>
 
             <a target="_blank" href="https://www.google.com"><h3>Google Homepage</h3></a>
+            <a href="page2.html">Page 2</a> <hr/>
+            <a href="images/cake.jpg">Redeem your free surprise here!!</a>
 
         </footer>
     </body>
