you tube embeding, tables, div and span containers

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
             <a target="_blank" href="https://www.google.com"><h3>Google Homepage</h3></a>
             <a href="page2.html">Page 2</a> <hr/>
-            <a href="images/cake.jpg">Redeem your free surprise here!!</a>
+            <a href="page3.html">Page 3</a>
 
         </footer>
     </body>
