--- a/page2.html
+++ b/page2.html
@@ -21,8 +21,11 @@
         </header>
         
         <main>
-
-            <a href="index.html"><img width="275" src="https://www.centurycommunities.com/Images/ImageManager/States/Utah_5/SizedBanner/utah%20(2)_1920x715.jpg" alt="Return to homepage." /></a>
+            <!--only use one size attribute and the browser will automatically 
+                size the other according to the origial images aspect ratio-->
+            <a href="index.html">
+                <img width="275" src="https://www.centurycommunities.com/Images/ImageManager/States/Utah_5/SizedBanner/utah%20(2)_1920x715.jpg" alt="Return to homepage." />
+            </a>
             <p>An unorder list with an embeded ordered list.<br/></p>
             <ul>
 
