metadata, iframe tag, input and its types

--- a/page3.html
+++ b/page3.html
@@ -4,6 +4,9 @@
 
 <head>
 
+
+    <meta name="viewport" content="width=device-width, intial-scale=1.0"> <!-- defines how html is displayed for different devices-->    <meta name="keywords" content="beginner, html, coding, tutorial"> <!--mostly ignored by most modern web broswers due to exploitation of query indexing-->
+    <meta name="author" content="fosstek">
     <meta charset="utf-8">
     <meta name="description" content="embedded video">
     <title>Page 3</title>
@@ -53,6 +56,34 @@
                 </tbody>
 
             </table>
+        </div>
+        <div>
+
+            <textarea rows="10" cols="35">
+
+                default text
+
+            </textarea>
+
+            <form>
+                <input type="text" value="default text"/>
+            </form>
+
+            <!--input type examples-->
+            <input type="date">
+            <input type="email">
+            <input type="range">
+            <input type="file">
+            <input type="checkbox">
+            <input type="radio" name="toggle"><!--same name attribute makes only one radio button selectable at a time-->
+            <input type="radio" name="toggle">
+            <input type="submit">
+
+
+        </div>
+        <iframe src="http://127.0.0.1:5500/websites/website-alpha/index.html" height="600" width="500" frameborder="0" >Google's website</iframe>
+        <div>
+
         </div>
     </main>
 
